Fixed Sign up and Sign in page. Added a few icons. Worked on the Home page spacing

--- a/app/assets/stylesheets/cms.css.scss
+++ b/app/assets/stylesheets/cms.css.scss
@@ -529,6 +529,7 @@ section {
 
       &.location { background-image: image-url("location.png"); }
       &.devices { background-image: image-url("devices.png"); }
+      &.get-started { background-image: image-url("getting-started-icon.png"); }
       &.templates { background-image: image-url("templates.png"); }
       &.content { background-image: image-url("content.png"); }
       &.analytics { background-image: image-url("analytics.png"); }
